GNOME Bugzilla – Bug 704854
video-player example doesn't cope with uris
Last modified: 2013-07-25 11:13:50 UTC
Created attachment 250097 [details] [review] proposed patch See attached patch to make it accept both file paths and uris
Review of attachment 250097 [details] [review]: Looks good.
commit 2a52c4789077512ce8ad5b7213a3771c92b44411 Author: Sjoerd Simons <sjoerd.simons@collabora.co.uk> Date: Thu Jul 25 12:50:58 2013 +0200 Handle both uris and local files Currently it's impossible to play a file from the internet with the video-player example. Solve this by recognizing whether a filepath or a uri was given and use the appropriate api depending on that. https://bugzilla.gnome.org/show_bug.cgi?id=704854