Handle both uris and local files

Currently it's impossible to play a file from the internet with the
video-player example. Solve this by recognizing whether a filepath or a
uri was given and use the appropriate api depending on that.

https://bugzilla.gnome.org/show_bug.cgi?id=704854